# agent-playground

./: .gitignore  hello-agents.code-workspace
hello-agents/chapter-01/code/: README.md  main.py  pyproject.toml  tools.py
hello-agents/chapter-01/code/v2/: README.md  config.py  main.py  pyproject.toml  tools.py
hello-agents/chapter-01/code/v2/agent/: __init__.py  agent.py  client.py  parser.py
hello-agents/chapter-03/: .gitignore  README.md  bpe.py  hf_demo.md  hf_demo.py  main.py  pyproject.toml
hello-agents/chapter-04/: helloAgentsLLM.py  main.py  planAndSolveAgent.py  planExecutor.py  planner.py  pyproject.toml  reactAgentsLLM.py  reflectionAgent.py  toolExecutor.py  tools.py
hello-agents/chapter-06/: crewaiAgents.py  langgraphAgent.py  langgraphTest.py  langgraphTest2.py  langgraphTest3.py  langgraphTest4.py  langgraphTest4_interrupt_demo.py  langgraphTest5.py  langgraphTest6.py  main.py  pyproject.toml
