[project]
name = "chapter-06"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=1.15.2",
    "crewai-tools>=1.15.2",
    "ipython>=9.15.0",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "litellm==1.91.2",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
